test/cases/parsing/eof.c
// RUN: %check -e %s

()( // CHECK: error: expecting token ',', got eof
